force-app/main/default/objects/LeadEntryEvent__e/LeadEntryEvent__e.object-meta.xml
<CustomObject>
    <label>Lead Entry Event</label>
    <pluralLabel>Leads Entries Events</pluralLabel>
</CustomObject>