force-app/main/default/objects/LeadEntryEvent__e/fields/LeadEntryId__c.field-meta.xml
<CustomField>
    <fullName>LeadEntryId__c</fullName>
    <label>LeadEntryId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>