force-app/main/default/objects/LeadEntryEvent__e/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <label>PartnerAccount</label>
    <length>55</length>
    <type>Text</type>
</CustomField>