force-app/main/default/objects/LeadEntryEvent__e/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>55</length>
    <type>Text</type>
</CustomField>